# cpp-logger

./: .gitignore  CMakeLists.txt  README.md
CMake/: cpp-logger-config-version.cmake.in  cpp-logger-config.cmake.build.in  cpp-logger-config.cmake.install.in
cmake/configure_files/: cpp-logger-config-version.cmake.in  cpp-logger-config.cmake.build.in  cpp-logger-config.cmake.install.in  cpp_logger_config.hpp.in  cpp_logger_module.lua.in
cmake/modules/: SetupCompiler.cmake
include/cpp-logger/: clogger.h  logger.h
src/cpp-logger/: clogger.cpp  logger.cpp
